--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="info-container">
             <div class="devinfo">
                 <div class="hello">Hii,i'm</div>
-                <div class="name">Shriyash</div>
+                <div class="name">Dev Mishra</div>
                 <div class="about">Coder,Developer,Blogger,Writer</div>
                 <div class="buttons">
                     <a href="./cv.txt"><button>Downloadcv</button></a>
