--- a/intro.html
+++ b/intro.html
@@ -29,9 +29,9 @@
     <h2 class="about"> About me</h2>
     <div class="edu">
         <ul class="ul">
-            <li>My name is shriyash</li>
-            <li>graduate from csjmu university kanpur</li>
-            <li>master's from NIT Jamshedpur</li>
+            <li>My name is Dev Mishra</li>
+            <li>graduate from CSJM University kanpur</li>
+            <li> Persuing master's from PSIT Kanpur</li>
             <li>having knowledge of Datastructure and better at problemsolving skills</li>
             <li>having great insights of HTML,CSS,Javascript and React.js</li>
         </ul>
